--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "buefy": "npm:@ntohq/buefy-next@^0.1.3",
+    "bulma": "^1.0.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "vuex": "^4.0.2"
