--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "standard": "^17.1.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
