--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "buefy": "npm:@ntohq/buefy-next@^0.1.3",
     "bulma": "^1.0.0",
+    "nprogress": "^0.2.0",
     "standard": "^17.1.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
